--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,84 @@
     transform: rotate(360deg);
   }
 }
+
+#image {
+  padding: 3px;
+  background: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  color: #fff;
+  margin-bottom: 10px;
+  width: 165px;
+  border-radius: 50%;
+  height: 160px;
+}
+
+.sidebar-wrapper {
+  background: #42a8c0;
+  position: absolute;
+  right: 0;
+  width: 240px;
+  height: 100%;
+  min-height: 800px;
+  color: #fff;
+}
+.main-wrapper .section-title {
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 650;
+  color: #2d7788;
+  position: relative;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+.main-wrapper .project-title {
+  font-size: 16px;
+  font-weight: 400;
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+.main-wrapper .job-title {
+  color: #3f4650;
+  font-size: 19px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 500;
+}
+.main-wrapper .time {
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: #97aac3;
+}
+.main-wrapper .company {
+  margin-bottom: 10px;
+  color: #97aac3;
+  font-size: 16px;
+}
+
+.skillset .item {
+  margin-bottom: 15px;
+  overflow: hidden;
+}
+
+.skillset .level-title {
+  font-size: 14px;
+  margin-top: 0;
+  margin-bottom: 12px;
+}
+.skillset .level-bar {
+  height: 12px;
+  background: #f5f5f5;
+  -webkit-border-radius: 2px;
+  -moz-border-radius: 2px;
+  -ms-border-radius: 2px;
+  -o-border-radius: 2px;
+  border-radius: 2px;
+  -moz-background-clip: padding;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+}
+
+.skillset .theme-progress-bar {
+  background: #68bacd;
+}
